<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="andy.playground.Memory_card_game">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvMinute"
            android:textSize="24sp"
            android:textColor="@color/timeText"
            android:background="@color/minuteBackground"
            android:gravity="center"
            android:padding="6dp"
            android:layout_margin="3dp"
            android:text="@string/time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/tvSecond"
            android:textSize="24sp"
            android:textColor="@color/timeText"
            android:background="@color/secondBackground"
            android:gravity="center"
            android:padding="6dp"
            android:layout_margin="3dp"
            android:text="@string/time"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGameStart"
            android:text="@string/gameStart"
            android:textSize="18sp"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonColor"
            android:onClick="onGameStart"
            android:padding="6dp"
            android:layout_margin="3dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGameReset"
            android:text="@string/gameReset"
            android:textSize="18sp"
            android:textColor="@color/buttonTextColor"
            android:background="@color/buttonColor"
            android:onClick="onGameReset"
            android:padding="6dp"
            android:layout_margin="3dp"
            />



    </LinearLayout>


    <GridView
        android:id="@+id/gvCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:columnWidth="80dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="4"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

</LinearLayout>